--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -3,6 +3,7 @@
 {#{% load static %}#}
 {#<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">#}
 {% extends 'base.html' %}
+{% load pybo_filter %}
 {% block content %}
 <div class="container my-3">
     <table class="table">
@@ -17,7 +18,11 @@
         {% if question_list %}
         {% for question in question_list %}
         <tr>
-            <td>{{ forloop.counter }}</td>
+{#            <td>{{ forloop.counter }}</td>#}
+            <td>
+                <!-- 게시물 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 -->
+                {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
+            </td>
             <td>
                 <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
             </td>
