--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -3,6 +3,7 @@
 <div class="container my-3">
     <form method="post" action="{% url 'common:login' %}">
         {% csrf_token %}
+        <input type="hidden" name="text" value="{{ next }}"> <!--로그인 성공 후 이동되는 url.. 인데 왜 안먹지-->
         {% include "form_errors.html" %}
         <div class="mb-3">
             <label for="username">사용자ID</label>
