--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -46,13 +46,13 @@
         </div>
         {% endif %}
         <!--오류표시 End-->
-{#        <div class="mb-3">#}
-{#            <label for="content" class="form-label">답변내용</label>#}
-{#            <textarea name="content" id="content" class="form-control" rows="10"></textarea>#}
-{#        </div>#}
-        <div class="form-grout">
-            <textarea name="content" id="content" class="for-control" rows="10"></textarea>
+        <div class="mb-3">
+            <label for="content" class="form-label">답변내용</label>
+            <textarea {% if not user.is_authenticated %}disabled{% endif %} name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
+{#        <div class="form-grout">#}
+{#            <textarea name="content" id="content" class="for-control" rows="10"></textarea>#}
+{#        </div>#}
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
