--- a/templates/base.html
+++ b/templates/base.html
@@ -20,5 +20,9 @@
 <!--기본 템플릿 안에 삽입될 내용 End-->
 <!--Bootstrap JS-->
 <script src="{%  static 'bootstrap.min.js' %}"></script> <!--숨겨진 "로그인" 링크 보이게-->
+<!-- 자바스크립트 Start. 자바스크립트는 </body> 태그 위에 바로 삽입 -->
+{% block script %}
+{% endblock %}
+<!-- 자바스크립트 End -->
 </body>
 </html>
