feat: add anchor

--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -30,6 +30,11 @@
                 </div>
             </div>
             <div class="my-3">
+                <!--질문 추천 버튼-->
+                <a href="javascript:void(0)" data-uri="{% url 'pybo:question_vote' question.id %}"
+                    class="recommend btn btn-sm btn-outline-secondary">추천
+                    <span class="badge rounded-pii bg-success">{{ question.voter.count }}</span>
+                </a>
                 {% if request.user == question.author %} <!--로그인한 사용자와 글쓴이가 동일한 경우에만 노출되도록-->
                 <a href="{% url 'pybo:question_modify' question.id %}"
                    class="btn btn-sm btn-outline-secondary">수정</a>
@@ -42,6 +47,7 @@
     <!-- 답변 -->
     <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
     {% for answer in question.answer_set.all %}
+    <a id="answer_{{ answer.id }}"></a> <!--앵커 태그-->
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
@@ -58,6 +64,10 @@
                 </div>
             </div>
             <div class="my-3">
+                <a href="javascript:void(0)" data-uri="{% url 'pybo:answer_vote' answer.id %}"
+                   class="recommend btn btn-sm btn-outline-secondary"> 추천
+                    <span class="badge rounded-pill bg-success">{{ answer.voter.count }}</span>
+                </a>
                 {% if request.user == answer.author %}
                 <a href="{% url 'pybo:answer_modify' answer.id %}"
                    class="btn btn-sm btn-outline-secondary">수정</a>
@@ -102,6 +112,14 @@ const delete_elements = document.getElementsByClassName("delete");
 Array.from(delete_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+const recommend_elements = document.getElementsByClassName("recommend");
+Array.from(recommend_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 추천하시겠습니까?")) {
             location.href = this.dataset.uri;
         };
     });
