--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,6 +1,7 @@
 {#{% load static %}#}
 {#<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">#}
 {% extends 'base.html' %}
+{% load pybo_filter %}
 {% block content %}
 <div class="container my-3">
     <!-- message 표시 -->
@@ -16,7 +17,7 @@
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="card-text">{{ question.content|mark }}</div>
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
@@ -50,7 +51,7 @@
     <a id="answer_{{ answer.id }}"></a> <!--앵커 태그-->
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+            <div class="card-text">{{ answer.content|mark }}</div>
             <div class="d-flex justify-content-end">
                 {% if answer.modify_date %}
                 <div class="badge bg-light text-dart p-2 text-start mx-3">
