feat: add search

--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -6,6 +6,19 @@
 {% load pybo_filter %}
 {% block content %}
 <div class="container my-3">
+    <div class="row my-3">
+        <div class="col-6">
+            <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}">
+                <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <table class="table">
         <thead>
         <tr class="text-center table-dark">
@@ -46,7 +59,8 @@
         <!--이전페이지-->
         {%  if question_list.has_previous %} <!--이전페이지가 있는지 체크-->
         <li class="page-item">
-            <a class="page-link" href="?page={{  question_list.previous_page_number }}">이전</a> <!--이전페이지 번호-->
+            <a class="page-link" data-page="{{ question_list.previous_page_number }}" href="javascript:void(0)">이전</a> <!--값을 읽어 폼에 설정할 수 있게 변경-->
+{#            <a class="page-link" href="?page={{  question_list.previous_page_number }}">이전</a> <!--이전페이지 번호-->#}
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -58,11 +72,13 @@
         {% if page_number >= question_list.number|add:-5 and page_number <= question_list.number|add:5 %} <!--페이지 표시 제한-->
         {% if page_number == question_list.number %} <!--현재 페이지와 같은지 체크-->
         <li class="page-item active" aria-current="page"> <!--현재 페이지와 같을 경우 active 클래스 적용하여 강조-->
-            <a class="page-link" href="?page={{  page_number }}">{{  page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}" href="javascript:void(0)">{{ page_number }}</a>
+{#            <a class="page-link" href="?page={{  page_number }}">{{  page_number }}</a>#}
         </li>
         {% else %}
         <li class="page-item">
-            <a class="page-link" href="?page={{  page_number }}">{{ page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}" href="javascript:void(0)">{{ page_number }}</a>
+{#            <a class="page-link" href="?page={{  page_number }}">{{ page_number }}</a>#}
         </li>
         {% endif %}
         {% endif %}
@@ -70,7 +86,8 @@
         <!--다음페이지-->
         {% if question_list.has_next %} <!--다음 페이지가 있는지 체크-->
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a> <!--다음페이지 번호-->
+            <a class="page-link" data-page="{{ question_list.next_page_number }}" href="javascript:void(0)">다음</a>
+{#            <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a> <!--다음페이지 번호-->#}
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -79,8 +96,29 @@
         {%  endif %}
     </ul>
     <!-- 페이징처리 끝 -->
-    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a> <!--btn btn-primary 클래스 적용시 버튼으로 보임-->
+{#    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a> <!--btn btn-primary 클래스 적용시 버튼으로 보임-->#}
 </div>
+<form id="searchForm" method="get" action="{% url 'index' %}"> <!--page와 kw를 동시에 GET으로 요청할 수 있는 searchForm, action 속성은 '폼이 전송되는 url'-->
+    <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
+{% endblock %}
+{% block script %}
+<script type="text/javascript">
+    const page_elements = document.getElementsByClassName("page-link");
+    Array.from(page_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            document.getElementById('page').value = this.dataset.page;
+            document.getElementById('searchForm').submit();
+        });
+    });
+    const btn_search = document.getElementById("btn_search");
+    btn_search.addEventListener('click', function() {
+        document.getElementById('kw').value = document.getElementById('search_kw').value;
+        document.getElementById('page').value = 1; //검색버튼을 클릭할 경우 1페이지부터 조회
+        document.getElementById('searchForm').submit();
+    });
+</script>
 {% endblock %}
 
 {% if question_list %} <!--question_list가 있다면-->
